TechPrototype/后端代码/Backend/services/meta-back-end/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meta-back-end
  labels:
    app: meta-back-end
spec:
  ports:
  - port: 30392
    targetPort: 30392
    name: tcp
  selector:
    app: meta-back-end
