TechPrototype/后端代码/Backend/services/meta-back-end/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meta-back-end
spec:
  hosts:
  - "*"
  gateways:
  - syh-gateway
  http:
  - match:
    - uri:
       prefix: /
    # rewrite:
      # uri: /
    route:
    - destination:
        host: meta-back-end
        port:
          number: 30392
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - DELETE
      - PUT
      allowCredentials: true
      allowHeaders:
      - "token"
      - "jwt"
      - "content-type"
      - "authorization"
